# AiScientist

./: .env.example  .gitignore  20260420-105826-10d1ec72.jsonl  BeyondModelReflection_DecoupledSafety_CN.tex  LICENSE  README.md  papers.md  pyproject.toml
config/: llm_profiles.yaml
docker/: build_paper_image.sh  mle-agent.Dockerfile  mle-entrypoint.sh  paper-agent.Dockerfile  paper-entrypoint.sh  paper.Dockerfile
docs/: experiment-convergence-guide.md  operator-guide.md
scripts/: run_paper_job.sh
src/: logid.py
src/aisci_agent_runtime/: __init__.py  llm_client.py  llm_profiles.py  log_utils.py  shell_interface.py  summary_utils.py  trace.py
src/aisci_agent_runtime/subagents/: __init__.py  base.py
src/aisci_agent_runtime/tools/: __init__.py  base.py  constraints.py  research_tools.py  shell_tools.py
src/aisci_app/: __init__.py  cli.py  presentation.py  service.py  web.py  worker_main.py
src/aisci_app/templates/: doctor.html  job_detail.html  (+1 more)
src/aisci_core/: __init__.py  exporter.py  logging_utils.py  models.py  paths.py  runner.py  store.py
src/aisci_domain_mle/: __init__.py  adapter.py  bootstrap_orchestrator.py  candidate_registry.py  constants.py  orchestrator.py  start.sh
src/aisci_domain_paper/: __init__.py  adapter.py  configs.py  constants.py  engine.py  orchestrator.py  paper_compat.py  runtime.py
src/aisci_runtime_docker/: __init__.py  agent_session.py  models.py  profiles.py  runtime.py
tests/: test_app_console.py  test_domain_adapters.py  test_paper_compat.py  test_paper_prompts.py  test_paper_runtime_alignment.py  test_store.py
(+32 files in other folders)
